--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -7,6 +7,11 @@ permissions:
   pull-requests: write  # Needed if in a private repository
 
 jobs:
+  actorcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print
+        run: echo "${{ github.actor }}"
   dependabot:
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' }}
